--- a/main/style.css
+++ b/main/style.css
@@ -97,7 +97,7 @@ header{
     width: 100vw;
     height: calc(100vh - (12em));
     text-align: center;
-    line-height: calc(100vh - (24em));
+    line-height: calc(100vh - (20em));
 }
 
 #main p{
@@ -116,6 +116,45 @@ canvas{
 }
 
 
+.slidecontainer {
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 80vw;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
 
 
 
